# spatial-labs-ai-engineer-take-home-assessment

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
data/: augmented_products.csv  products.csv
notebooks/: agent.ipynb
src/app/: assistants.py  tools.py
