[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Michael James Schock <m@mjschock.com>"]
readme = "README.md"
packages = [{include = "app", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.3"
llama-index = "^0.10.44"
llama-index-embeddings-clip = "^0.1.5"
llama-index-vector-stores-postgres = "^0.1.10"
marvin = {extras = ["audio"], version = "^2.3.4"}
pandas = "^2.2.2"
pillow = "^10.3.0"
selenium = "^4.21.0"
clip = {git = "https://github.com/openai/CLIP.git"}


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
ipywidgets = "^8.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
